--- a/client/package.json
+++ b/client/package.json
@@ -1,24 +1,17 @@
 {
-  "name": "bug-tracking-system---copy",
+  "name": "client",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/app.js",
+    "start": "react-scripts start",
     "build": "react-scripts build"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.2",
     "cors": "^2.8.5",
-    "express": "^4.17.3",
-    "mysql": "^2.18.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
