--- a/server/package.json
+++ b/server/package.json
@@ -4,25 +4,25 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "accepts": "^1.3.8",
     "abbrev": "^1.1.1",
+    "accepts": "^1.3.8",
     "ansi-align": "^3.0.1",
     "ansi-regex": "^5.0.1",
     "ansi-styles": "^4.3.0",
     "anymatch": "^3.1.2",
-    "balanced-match": "^1.0.2",
     "array-flatten": "^1.1.1",
+    "balanced-match": "^1.0.2",
     "bignumber.js": "^9.0.0",
+    "binary-extensions": "^2.2.0",
     "body-parser": "^1.19.2",
     "boxen": "^5.1.2",
     "brace-expansion": "^1.1.11",
-    "binary-extensions": "^2.2.0",
     "braces": "^3.0.2",
+    "bytes": "^3.1.2",
     "cacheable-request": "^6.1.0",
     "camelcase": "^6.3.0",
-    "chokidar": "^3.5.3",
-    "bytes": "^3.1.2",
     "chalk": "^4.1.2",
+    "chokidar": "^3.5.3",
     "ci-info": "^2.0.0",
     "cli-boxes": "^2.2.1",
     "clone-response": "^1.0.2",
@@ -44,10 +44,11 @@
     "depd": "^1.1.2",
     "destroy": "^1.0.4",
     "dot-prop": "^5.3.0",
-    "ee-first": "^1.1.1",
+    "dotenv": "^16.0.0",
     "duplexer3": "^0.1.4",
-    "encodeurl": "^1.0.2",
+    "ee-first": "^1.1.1",
     "emoji-regex": "^8.0.0",
+    "encodeurl": "^1.0.2",
     "end-of-stream": "^1.4.4",
     "escape-goat": "^2.1.1",
     "escape-html": "^1.0.3",
@@ -60,8 +61,8 @@
     "get-stream": "^4.1.0",
     "glob-parent": "^5.1.2",
     "global-dirs": "^3.0.0",
-    "graceful-fs": "^4.2.9",
     "got": "^9.6.0",
+    "graceful-fs": "^4.2.9",
     "has-flag": "^3.0.0",
     "has-yarn": "^2.1.0",
     "http-cache-semantics": "^4.1.0",
@@ -72,24 +73,27 @@
     "imurmurhash": "^0.1.4",
     "inherits": "^2.0.4",
     "ini": "^2.0.0",
-    "is-binary-path": "^2.1.0",
     "ipaddr.js": "^1.9.1",
+    "is-binary-path": "^2.1.0",
     "is-ci": "^2.0.0",
     "is-extglob": "^2.1.1",
     "is-fullwidth-code-point": "^3.0.0",
     "is-glob": "^4.0.3",
+    "is-installed-globally": "^0.4.0",
+    "is-npm": "^5.0.0",
     "is-number": "^7.0.0",
     "is-obj": "^2.0.0",
     "is-path-inside": "^3.0.3",
     "is-typedarray": "^1.0.0",
     "is-yarn-global": "^0.3.0",
-    "is-installed-globally": "^0.4.0",
     "isarray": "^1.0.0",
     "json-buffer": "^3.0.0",
     "keyv": "^3.1.0",
     "latest-version": "^5.1.0",
     "lowercase-keys": "^1.0.1",
-    "is-npm": "^5.0.0",
+    "lru-cache": "^6.0.0",
+    "make-dir": "^3.1.0",
+    "media-typer": "^0.3.0",
     "merge-descriptors": "^1.0.1",
     "methods": "^1.1.2",
     "mime": "^1.6.0",
@@ -97,10 +101,10 @@
     "mime-types": "^2.1.34",
     "mimic-response": "^1.0.1",
     "minimatch": "^3.0.4",
-    "media-typer": "^0.3.0",
     "minimist": "^1.2.5",
     "ms": "^2.0.0",
     "mysql": "^2.18.1",
+    "negotiator": "^0.6.3",
     "nodemon": "^2.0.15",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
@@ -108,9 +112,7 @@
     "object-assign": "^4.1.1",
     "on-finished": "^2.3.0",
     "once": "^1.4.0",
-    "negotiator": "^0.6.3",
     "p-cancelable": "^1.1.0",
-    "make-dir": "^3.1.0",
     "package-json": "^6.5.0",
     "parseurl": "^1.3.3",
     "path-to-regexp": "^0.1.7",
@@ -119,37 +121,36 @@
     "process-nextick-args": "^2.0.1",
     "proxy-addr": "^2.0.7",
     "pstree.remy": "^1.1.8",
+    "pump": "^3.0.0",
     "pupa": "^2.1.1",
     "qs": "^6.9.7",
-    "pump": "^3.0.0",
     "range-parser": "^1.2.1",
     "raw-body": "^2.4.3",
     "rc": "^1.2.8",
     "readable-stream": "^2.3.7",
-    "lru-cache": "^6.0.0",
-    "registry-auth-token": "^4.2.1",
     "readdirp": "^3.6.0",
+    "registry-auth-token": "^4.2.1",
+    "registry-url": "^5.1.0",
+    "responselike": "^1.0.2",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
     "semver": "^5.7.1",
     "semver-diff": "^3.1.1",
-    "registry-url": "^5.1.0",
     "send": "^0.17.2",
     "serve-static": "^1.14.2",
-    "responselike": "^1.0.2",
     "setprototypeof": "^1.2.0",
     "signal-exit": "^3.0.6",
-    "statuses": "^1.5.0",
     "sqlstring": "^2.3.1",
-    "string-width": "^4.2.3",
+    "statuses": "^1.5.0",
     "string_decoder": "^1.1.1",
+    "string-width": "^4.2.3",
     "strip-ansi": "^6.0.1",
-    "supports-color": "^5.5.0",
-    "safe-buffer": "^5.2.1",
     "strip-json-comments": "^2.0.1",
+    "supports-color": "^5.5.0",
     "to-readable-stream": "^1.0.0",
     "to-regex-range": "^5.0.1",
     "toidentifier": "^1.0.1",
     "touch": "^3.1.0",
-    "safer-buffer": "^2.1.2",
     "type-fest": "^0.20.2",
     "type-is": "^1.6.18",
     "typedarray-to-buffer": "^3.1.5",
@@ -157,18 +158,17 @@
     "unique-string": "^2.0.0",
     "unpipe": "^1.0.0",
     "update-notifier": "^5.1.0",
+    "url-parse-lax": "^3.0.0",
     "util-deprecate": "^1.0.2",
     "utils-merge": "^1.0.1",
-    "url-parse-lax": "^3.0.0",
-    "widest-line": "^3.1.0",
     "vary": "^1.1.2",
+    "widest-line": "^3.1.0",
     "wrap-ansi": "^7.0.0",
     "wrappy": "^1.0.2",
     "write-file-atomic": "^3.0.3",
     "xdg-basedir": "^4.0.0",
     "yallist": "^4.0.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
